--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "yarn lint:js"
   },
   "dependencies": {
-    "@nuxtjs/auth": "^4.9.1",
+    "@nuxtjs/auth-next": "5.0.0-1624817847.21691f1",
     "@nuxtjs/axios": "^5.11.0",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
     "@nuxtjs/style-resources": "^1.0.0",
