--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "node node_modules/nuxt/bin/nuxt.js",
-    "build": "nuxt build",
+    "build": "nuxt build --openssl-legacy-provider start",
     "start": "nuxt start",
     "export": "nuxt export",
     "serve": "nuxt serve",
